[package]
name = "fastid"
version = "0.2.3"
authors = ["Chino Chang <chino@joymoe.com>"]
edition = "2018"

description = "Snowflake-like ID generating in Rust"
documentation = "https://docs.rs/fastid"
homepage = "https://github.com/JoyMoe/FastID-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/JoyMoe/FastID-rs"

[dependencies]

[dependencies.base62]
version = "1.1"
optional = true

[dependencies.base64]
version = "0.13"
optional = true

[dependencies.uuid]
version = "0.8"
optional = true

[dev-dependencies]

[features]
default = []
guid = ["uuid"]
