[package]
name = "fastid"
version = "0.3.0"
authors = ["Chino Chang <chino@joymoe.com>"]
edition = "2021"

description = "Snowflake-like ID generating in Rust"
documentation = "https://docs.rs/fastid"
homepage = "https://github.com/JoyMoe/FastID-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/JoyMoe/FastID-rs"

[dependencies]

[dependencies.base62]
version = "2.0"
optional = true

[dependencies.base64]
version = "0.21"
optional = true

[dependencies.uuid]
version = "1.6"
optional = true

[features]
default = []
guid = ["uuid"]
